# skim

./: .env.example  .gitignore  .pre-commit-config.yaml  .pyrightconfig.json  .ruffignore  .secrets.baseline  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  SETUP.md  app-builder-task.md  apply_trusted_ips.sh  bot.py  cli-extractor-task.md  configure_jts.sh  crontab  di-container-task.md  diagnose.sh  docker-compose.yml  domain-builder-task.md  ibkr-splitter-task.md  infra-builder-task.md  migrator-task.md  pyproject.toml  requirements.txt  startup.sh  strategy-simplify-task.md  test_scanner_fix.py
.claude/: settings.json
.claude/hooks/: CONFIG.md  README.md  post-tool-use-tracker.py  skill-activation-prompt.py  stop-python-check.sh
.claude/skills/: skill-rules.json
.opencode/: opencode.json
.opencode/plans/: event-driven-orchestration.md  fix-import-dependency-cascade.md  fix-pre-commit-hook-iterations.md  fix-strategy-name-propagation.md  fix-test-fixture-updates.md  fix-type-inference-optional-handling.md  hexagonal-architecture-refactor.md  redesign-architecture.md  refactor-quick-reference.md  simplify-mapper-complexity.md  strategy-interface-unification.md
.opencode/skim-analysis/: SKILL.md
deploy/: GITOPS_NOTES.md  sudoers-skim  webhook.sh
docs/: AGENTS.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  DISCORD_WEBHOOK_SETUP.md  GITOPS_NOTES.md  IBKR_WEB_API.md  INTEGRATIONS.md  PLAN_TEST_EFFICIENCY.md  PLAN_TEST_FIXES.md  PRODUCTION_READINESS_PLAN.md  README.md  SECURITY.md  SETUP.md  TESTING.md  TRADING_WORKFLOW.md  WEBHOOK_SETUP.md
docs/plans/: 2025-11-03-ibeam-ibind-migration-design.md  2025-11-03-price-sensitive-announcements-design.md  2025-11-03-refactoring-architecture-design.md  2025-11-04-custom-ibkr-client-design.md  2025-11-09_IBKR_SCANNING.md  2025-11-23-python-313-upgrade-design.md  2025-11-23-remove-docker-design.md
scripts/: apply_trusted_ips.sh  check-env-example.sh  create-worktree.sh  diagnose.sh  merge-worktree.sh  monitor_oauth.sh  start-bot-local.sh  startup.sh  test_oauth_connection.py  validate_oauth.py
scripts/agents/: delegation.sh  run-agent.sh
src/skim/: __init__.py  monitor.py  range_tracker.py  scanner.py  trader.py
src/skim/analysis/: __init__.py  announcement_scraper.py  chart_viewer.py  data_downloader.py  data_loader.py  data_preprocessor.py  date_parser.py  db_loader.py  gap_scanner.py  momentum_scanner.py  performance.py  stock_data.py
src/skim/analysis/cli/: cli.py  main.py
src/skim/application/: __init__.py
src/skim/application/commands/: __init__.py  base.py  manage.py  purge.py  scan.py  status.py  trade.py
src/skim/application/events/: __init__.py  event_bus.py  handlers.py
src/skim/application/notifications/: __init__.py  handler.py
src/skim/application/persistence/: __init__.py  handler.py
src/skim/application/services/: __init__.py  command_dispatcher.py  trading_context.py  trading_service.py
src/skim/brokers/: __init__.py  ib_client.py  ib_interface.py  ibind_client.py  ibkr_client.py  ibkr_gap_scanner.py  ibkr_market_data.py  ibkr_oauth.py  ibkr_orders.py  ibkr_scanner.py  protocols.py
src/skim/core/: bot.py  config.py
src/skim/data/: __init__.py  database.py  models.py
src/skim/data/repositories/: orh_repository.py
src/skim/domain/: __init__.py
src/skim/infrastructure/: __init__.py
src/skim/notifications/: discord.py
src/skim/protocols/: trader.py
src/skim/scanners/: __init__.py  asx_announcements.py  gap_scanner.py  ibkr_gap_scanner.py  news_scanner.py  tradingview.py
src/skim/shared/: __init__.py  constants.py  container.py  database.py  exceptions.py
src/skim/strategies/: __init__.py  base.py  orh_breakout.py
src/skim/strategy/: __init__.py  entry.py  exit.py  order_executor.py  position_manager.py
src/skim/trading/: cli.py  monitor.py
src/skim/validation/: __init__.py  accounts.py  contracts.py  market_data.py  orders.py  scanners.py
tests/: README.md  __init__.py  conftest.py  factories.py
tests/analysis/: test_data_downloader.py
tests/domain/: test_models.py  test_strategy_registry.py
tests/fixtures/ibkr_responses/: account_list.json  session_init_success.json
tests/fixtures/rsa_keys/: README.md  test_encryption_key.pem  test_signature_key.pem
tests/integration/: conftest.py  test_discord_integration.py  test_penny_stock_scanning.py
tests/integration/client/: test_client_order_management.py  test_client_read_operations.py
tests/integration/oauth/: test_oauth_authentication.py  test_oauth_full_flow.py  test_oauth_lst_generation.py  test_oauth_ssodh_integration.py
tests/integration/workflow/: test_end_to_end_workflow.py
tests/shared/: conftest.py  test_historical_repository.py  test_historical_service.py
tests/trading/: __init__.py  conftest.py
tests/trading/integration/: __init__.py  conftest.py  test_discord_integration.py  test_penny_stock_scanning.py
tests/trading/unit/: conftest.py  test_cli.py  test_config.py  test_cron_schedule.py  test_database.py  test_discord.py  test_models.py  test_monitor.py  test_orh_repository.py  test_scanner_config.py  test_trading_bot.py
tests/unit/: conftest.py  test_bot.py  test_bot_exit_strategy_integration.py  test_bot_position_manager_integration.py  test_bot_stop_loss_daily_low.py  test_config.py  test_config_integration.py  test_config_loading.py  test_cron_schedule.py  test_database.py  test_dependency_injection.py  test_discord.py  test_ib_client.py  test_ibind_client.py  test_models.py  test_monitor.py  test_oauth_config.py  test_order_executor.py  test_orh_repository.py  test_range_tracker.py  test_scan_decoupling.py  test_scanner.py  test_scanner_config.py  test_scanner_decoupled.py  test_scanners.py  test_strategy.py  test_trader.py
tests/unit/brokers/: __init__.py  conftest.py  test_ibkr_client.py  test_ibkr_market_data.py  test_ibkr_market_data_low.py  test_ibkr_oauth.py  test_ibkr_orders.py  test_ibkr_penny_stocks.py  test_ibkr_scanner.py
tests/unit/strategies/: test_orh_breakout.py
tests/unit/validation/: test_market_data.py  test_price_parsing.py  test_scanners.py
(+116 files in other folders)
