[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skim"
version = "0.1.0"
description = "ASX Pivot Trading Bot for Interactive Brokers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "ib-insync==0.9.86",
    "loguru==0.7.2",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "pytz==2024.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[tool.black]
line-length = 80
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.tox
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 80
target-version = "py311"

# Enable pycodestyle (E), Pyflakes (F), and isort (I) by default
select = [
    "E",     # pycodestyle errors
    "F",     # Pyflakes
    "I",     # isort
    "W",     # pycodestyle warnings
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
]

ignore = [
    "E501",  # Line too long (handled by Black)
]

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint.isort]
known-first-party = ["skim"]

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
line-ending = "auto"
