[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skim"
version = "0.1.0"
description = "ASX Pivot Trading Bot for Interactive Brokers"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "beautifulsoup4==4.12.3",
    "loguru==0.7.2",
    "lxml==5.1.0",
    "pycryptodome==3.23.0",
    "python-dotenv==1.0.1",
    "pydantic==2.10.5",
    "requests==2.32.4",
    "pytz==2024.1",
]

[project.scripts]
skim = "skim.core.bot:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
    "freezegun>=1.4.0",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
line-length = 80
target-version = "py312"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), and isort (I) by default
select = [
    "E",     # pycodestyle errors
    "F",     # Pyflakes
    "I",     # isort
    "W",     # pycodestyle warnings
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
]

ignore = [
    "E501",  # Line too long (handled by Ruff formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["skim"]

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --log-level=WARNING"
markers = [
    "manual: marks tests that require real IBKR credentials (not run in CI)",
    "integration: marks tests as integration tests (requires external services)",
    "unit: marks tests as unit tests (fast, everything mocked)",
]

[tool.coverage.run]
source = ["src/skim"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "detect-secrets>=1.5.0",
    "types-requests>=2.32.4.20250913",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "responses>=0.25.8",
    "freezegun>=1.5.5",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.5.0",
]
