[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skim"
version = "0.1.0"
description = "ASX Pivot Trading Bot for Interactive Brokers"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "beautifulsoup4==4.14.2",
    "httpx==0.28.1",
    "loguru==0.7.3",
    "lxml==6.0.2",
    "pycryptodome==3.23.0",
    "python-dotenv==1.2.1",
    "pydantic==2.12.4",
    "requests==2.32.5",
    "pytz==2025.2",
    "sqlmodel>=0.0.22,<1.0",
]

[project.scripts]
skim = "skim.core.bot:main"

[tool.ruff]
line-length = 80
target-version = "py313"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), and isort (I) by default
select = [
    "E",     # pycodestyle errors
    "F",     # Pyflakes
    "I",     # isort
    "W",     # pycodestyle warnings
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
]

ignore = [
    "E501",  # Line too long (handled by Ruff formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["skim"]

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --log-level=WARNING --timeout=5"
timeout_func_only = true
markers = [
    "manual: marks tests that require real IBKR credentials (not run in CI)",
    "integration: marks tests as integration tests (requires external services)",
    "unit: marks tests as unit tests (fast, everything mocked)",
]

[tool.coverage.run]
source = ["src/skim"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "detect-secrets>=1.5.0",
    "types-requests>=2.32.4.20250913",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "responses>=0.25.8",
    "freezegun>=1.5.5",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-asyncio>=0.23.7",
    "pyright>=1.1.400",
]
